# lexchat-eval

./: .gitignore  README.md  open_db_ui.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
lex_eval/: .env.example  dashboardinfo.txt  gather_responses.py  json_check.ipynb  open_db_ui.py  run_evals.py
lex_eval/data/: questions.json  raw_output.txt
lex_eval/metrics/: __init__.py  answer_relevancy.py  consistency.py  consistency_llm.py  research_groundedness.py  response_groundedness.py  structure.py  tool_usage.py
lex_eval/reports/: __init__.py  export_dashboard.py  streamlit_report.py
lex_eval/tests/: __init__.py  conftest.py  test_consistency.py  test_consistency_llm.py  test_groundedness.py  test_structure.py  test_tool_usage.py
lex_eval/utils/: __init__.py  audit_capture.py  collector.py  db.py  gemini_judge.py  get_llms.py  judge.py  lexchat_client.py  openai_judge.py  test_helpers.py
